--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
             <button id="btn-mark-skip"  class="btn btn-mark-skip  btn-sm">⊘ Skip</button>
             <button id="btn-mark-reset" class="btn btn-ghost      btn-sm">↺ Reset</button>
           </div>
+          <div class="remark-box">
+            <label class="remark-label" for="remark-input">Remark</label>
+            <textarea id="remark-input" class="remark-textarea" placeholder="Add a note for this test case…" rows="3"></textarea>
+          </div>
         </div>
       </section>
 
