ability to add new option

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
       </div>
 
       <div class="toolbar-actions">
+        <button id="btn-edit-dims"    class="btn btn-secondary btn-sm">⚙ Dimensions</button>
+        <div class="sep"></div>
         <button id="btn-expand-all"   class="btn btn-ghost">⊞ Expand</button>
         <button id="btn-collapse-all" class="btn btn-ghost">⊟ Collapse</button>
         <div class="sep"></div>
