export to excel

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <div class="toolbar-actions">
         <button id="btn-edit-dims"    class="btn btn-secondary btn-sm">⚙ Dimensions</button>
         <div class="sep"></div>
+        <button id="btn-export"       class="btn btn-ghost btn-sm">⬇ Export</button>
+        <div class="sep"></div>
         <button id="btn-expand-all"   class="btn btn-ghost">⊞ Expand</button>
         <button id="btn-collapse-all" class="btn btn-ghost">⊟ Collapse</button>
         <div class="sep"></div>
@@ -93,6 +95,7 @@
     <li data-action="reset">↺ Reset</li>
   </ul>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="app.js"></script>
 </body>
 </html>
